# Spider-light-search-enginee

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini  ezParser.cpp  ezParser.h  ini_parser.cpp  ini_parser.h
http_server/: CMakeLists.txt  HttpServerApp.cpp  html_generator.cpp  html_generator.h  http_connection.cpp  http_connection.h  search_documents.cpp  search_documents.h
spider/: CMakeLists.txt  SpiderApp.cpp  db_buffer.cpp  db_buffer.h  extract_urls.h  http_utils.cpp  http_utils.h  link.h  parse_urls.h  table_manager.cpp  table_manager.h  text_processor.h
